Add ScreenshotOnFailure listener and wire up in BaseTest